# FinalNLPProject

./: .gitignore  README.md  evaluation_metrics.py  main.py  misclassification_analysis.py  pyproject.toml
notebooks/: baseline_model.ipynb  baseline_model_final.ipynb  fine_tuned_model.ipynb  fine_tuned_model_final.ipynb
reports/: comprehensive_final_report.md  model_comparison.md  model_performance_comparison.md  project_plan.md
