[project]
name = "nlp-final-project"
version = "0.1.0"
description = "Final Project for the NLP course"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn",
    "pandas",
    "matplotlib",
    "seaborn",
    "transformers",
    "datasets",
    "torch",
    "tqdm",
    "jupyter",
    "kagglehub",
    "nltk"
]
